--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,6 +123,7 @@
         android:layout_marginBottom="232dp"
         android:background="@color/colorPrimary"
         android:text="Next"
+        android:onClick="onClick"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
