--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#5D4037</color>
     <color name="colorAccent">#D81B60</color>
     <color name="bg">#D7CCC8</color>
+    <color name="btn_nav">#ffd6cb</color>
     <color name="white">#FFFFFF</color>
     <color name="LoginWidgets">#B8AEAB</color>
 </resources>
